# wavelet

./: .gitignore  CMakeLists.txt  _compilation.html  _examples.html  annotated.html  attribute_8hpp_source.html  classwavelet_1_1_attribute-members.html  classwavelet_1_1_attribute.html  classwavelet_1_1_filterbank-members.html  classwavelet_1_1_filterbank.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_aebb8dcc11953d78e620bbef0b9e2183.html  filterbank_8hpp_source.html  index.html  jtabs.css  readme.md  todo.html  wavelet__all_8hpp_source.html
dependencies/armanpy/: armanpy.hpp  armanpy.i  armanpy_1d.i  armanpy_2d.i  armanpy_3d.i
dependencies/catch/: catch.hpp
doc/: Doxyfile  Doxyfile-API  Doxyfile-dot
doc/doc-misc/: DoxygenLayout-API.xml  header.html  jdoxygen.css
ide/xcode/wavelet.xcodeproj/: project.pbxproj
ide/xcode/woma.xcodeproj/: project.pbxproj
python/: CMakeLists.txt
python/src/: Doxyfile-Python  __init__.py  move_files.sh  wavelet.i  woma.i
search/: all_1.js  all_3.js  all_4.js  all_8.js  all_9.js  all_a.js  all_c.js  all_e.js  classes_0.js  classes_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  pages_1.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js  variables_5.js
src/: wavelet_all.hpp  woma.hpp
src/core/: attribute.cpp  attribute.hpp  filterbank.cpp  filterbank.hpp  lowpass.cpp  lowpass.hpp  wavelet.cpp  wavelet.hpp  womaAttribute.cpp  womaAttribute.hpp  womaFilterbank.cpp  womaFilterbank.hpp  womaLowpass.cpp  womaLowpass.hpp  womaWavelet.cpp  womaWavelet.hpp
src/wavelets/: morlet.cpp  morlet.hpp  paul.cpp  paul.hpp  womaMorlet.cpp  womaMorlet.hpp  womaPaul.cpp  womaPaul.hpp
test/: catch_utilities.hpp  main_wavelets_tests.cpp  tests_filterbank.cpp  tests_morlet.cpp  tests_paul.cpp
